--- a/Chatgpt-clone/client/src/App.css
+++ b/Chatgpt-clone/client/src/App.css
@@ -1,23 +1,41 @@
 .App {
   text-align: center;
-  display: flex;
+  display: flex;/* 
   background: #173247;
-  background: linear-gradient(270deg, rgba(23, 50, 71, 1) 0%, rgba(39, 8, 54, 1) 100%);;
+  background: linear-gradient(270deg, rgba(23, 50, 71, 1) 0%, rgba(39, 8, 54, 1) 100%);; */
   color: white;
   position:absolute;
   bottom:0;top:0;left:0;right:0;
 }
 
-.left_sidemenu {
+.left-sidemenu {
   width: 240px;
+  padding:8px;
+  background: rgb(47, 11, 65);
+  background: linear-gradient(270deg, rgba(47, 11, 65, 1) 0%, rgba(23, 50, 71, 1) 100%);
+}
+
+.side-menu-button {
+  padding: 12px;
   border:1px solid white;
-  background: rgb(39, 8, 54);
-  background: linear-gradient(270deg, rgba(39, 8, 54, 1) 0%, rgba(23, 50, 71, 1) 100%);
+  border-radius: 5px;
+  text-align: left;
+}
+
+.side-menu-button span {
+  padding-left: 6px;
+  padding-right: 12px;
+}
+
+.side-menu-button:hover {
+  background-color: rgba(255,255,255,0.1);
+  transition: ease 0.15s all;
 }
 
 .chatbox {
   flex: 1;
-  border: 1px solid white;
+  background: rgb(47, 11, 65);
+  background: linear-gradient(90deg, rgba(47, 11, 65, 1) 0%, rgba(23, 50, 71, 1) 100%);
 }
 
 .App-logo {
@@ -29,6 +47,18 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.chat-input-holder {
+
+}
+
+.chat-input-text-area {
+  background-color: rgba(52, 29, 64, 0.6);
+  width: 75%;
+  border-radius: 5px;
+  border: 5px;
+  border-color: white;
 }
 
 .App-header {
