--- a/Chatgpt-clone/client/src/App.css
+++ b/Chatgpt-clone/client/src/App.css
@@ -55,10 +55,13 @@
 
 .chat-input-text-area {
   background-color: rgba(52, 29, 64, 0.6);
-  width: 75%;
+  width: 100%;
   border-radius: 5px;
   border: 5px;
   border-color: white;
+  margin: 12px;
+  outline: none;
+  box-shadow: 0 8px 0 0 rgba(rgb(56, 16, 62), rgb(37, 22, 99), rgb(72, 72, 95), alpha);
 }
 
 .App-header {
