--- a/Chatgpt-clone/client/src/App.css
+++ b/Chatgpt-clone/client/src/App.css
@@ -1,8 +1,6 @@
 .App {
   text-align: center;
-  display: flex;/* 
-  background: #173247;
-  background: linear-gradient(270deg, rgba(23, 50, 71, 1) 0%, rgba(39, 8, 54, 1) 100%);; */
+  display: flex;
   color: white;
   position:absolute;
   bottom:0;top:0;left:0;right:0;
@@ -10,7 +8,7 @@
 
 .left-sidemenu {
   width: 240px;
-  padding:8px;
+  padding:12px;
   background: rgb(47, 11, 65);
   background: linear-gradient(270deg, rgba(47, 11, 65, 1) 0%, rgba(23, 50, 71, 1) 100%);
 }
@@ -50,18 +48,25 @@
 }
 
 .chat-input-holder {
+  padding: 12px;
+  position: absolute;
+  bottom: 0;
+  left: 0;right: 0;
+  top:0;
 
 }
 
 .chat-input-text-area {
-  background-color: rgba(52, 29, 64, 0.6);
+  background-color: rgba(217, 214, 220, 0.8);
   width: 100%;
   border-radius: 5px;
   border: 5px;
   border-color: white;
+  color: white;
+  font-size: 1.25em;
   margin: 12px;
   outline: none;
-  box-shadow: 0 8px 0 0 rgba(rgb(56, 16, 62), rgb(37, 22, 99), rgb(72, 72, 95), alpha);
+  box-shadow: 0 0 8px 0 rgba(rgb(56, 16, 62), rgb(37, 22, 99), rgb(72, 72, 95), alpha);
 }
 
 .App-header {
