--- a/Chatgpt-clone/client/src/App.css
+++ b/Chatgpt-clone/client/src/App.css
@@ -85,7 +85,15 @@
   height: 40px;
 }
 
-.chat-message.chatgpt {
+.avatar.aibot {
+  background: rgb(80, 21, 105);
+  color: black;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+
+.chat-message.aibot {
   background-color: rgba(130, 124, 136, 0.8);
   border-radius: 4px 12px 0px 0px;
 }
@@ -102,9 +110,11 @@
 }
 
 .message {
-  display: flex;/* 
-  padding-left:  40px;
-  padding-right: 40px; */
+  display: flex;
+  padding-left:  12px;
+  padding-right: 12px;
+  padding-top: 12px;
+  padding-bottom: 12px;
 
 }
 
