--- a/Chatgpt-clone/client/src/App.css
+++ b/Chatgpt-clone/client/src/App.css
@@ -78,8 +78,8 @@
 }
 
 .avatar {
-  background: white;
-  color: black;
+  background: rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -95,7 +95,7 @@
 
 .chat-message.aibot {
   background-color: rgba(130, 124, 136, 0.8);
-  border-radius: 4px 12px 0px 0px;
+  border-radius: 4px 12px 0px 12px;
 }
 
 .chat-message-center {
