--- a/Chatgpt-clone/client/src/App.css
+++ b/Chatgpt-clone/client/src/App.css
@@ -14,20 +14,44 @@
 }
 
 .side-menu-button {
+  font-family: monospace;
   padding: 12px;
-  border:1px solid white;
+  background: rgb(47, 11, 65);
+  background: linear-gradient(175deg, rgba(47, 11, 65, 1) 0%, rgba(23, 50, 71, 1) 100%);
   border-radius: 5px;
   text-align: left;
+  box-shadow: 0 0 0.1px #ffffff,
+      0 0 1px #ffffff,
+      0 0 2px #ffffff,
+      0 0 1px #ffffff;
 }
 
 .side-menu-button span {
-  padding-left: 6px;
-  padding-right: 12px;
+  padding-left: 1px;
+  padding-right: 1px;
+  position: relative;
+  display: inline-block;
+  margin: 0px 0;
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: 0.5s;
+  letter-spacing: 4px;
+  overflow: hidden;
+  margin-right: 1px;
+    
 }
 
 .side-menu-button:hover {
-  background-color: rgba(255,255,255,0.1);
-  transition: ease 0.15s all;
+/*   background-color: rgba(255,255,255,0.1);
+  transition: ease 0.15s all; */
+  background: #e625c9(transparent, #3159ab);
+    color: #ffffff;
+    box-shadow: 0 0 0.2px #ffffff,
+      0 0 1px #ffffff,
+      0 0 4px #f403e0,
+      0 0 8px #f403bc;
+      
 }
 
 .chatbox {
