--- a/Chatgpt-clone/client/src/App.css
+++ b/Chatgpt-clone/client/src/App.css
@@ -109,7 +109,7 @@
   height: 40px;
 }
 
-.avatar.aibot {
+.avatar.chatgpt {
   background: rgb(80, 21, 105);
   color: black;
   border-radius: 50%;
@@ -117,7 +117,7 @@
   height: 40px;
 }
 
-.chat-message.aibot {
+.chat-message.chatgpt {
   background-color: rgba(130, 124, 136, 0.8);
   border-radius: 4px 12px 0px 12px;
 }
