--- a/Chatgpt-clone/client/src/App.css
+++ b/Chatgpt-clone/client/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .side-menu-button {
-  font-family: monospace;
+  font-family: woff2, monospace;
   padding: 12px;
   background: rgb(47, 11, 65);
   background: linear-gradient(175deg, rgba(47, 11, 65, 1) 0%, rgba(23, 50, 71, 1) 100%);
@@ -124,7 +124,7 @@
 
 .chat-message-center {
   display: flex;
-  max-width: 640px;
+  max-width: 1920px;
   margin-left: auto;
   margin-right: auto;
   padding: 12px;
